--- a/BulkyWeb/Views/Category/Edit.cshtml
+++ b/BulkyWeb/Views/Category/Edit.cshtml
@@ -4,10 +4,10 @@
 <form method="post">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
-            <h2 class="text-primary">Create Category</h2>
+            <h2 class="text-primary">Edit Category</h2>
             <hr/>
         </div>
-       <div asp-validation-summary="ModelOnly"></div>
+        <div asp-validation-summary="ModelOnly"></div>
         <div class="mb-3 row p-1">
             <label  asp-for="Name" class="p-0"></label>
             <input asp-for="Name"  class="form-control"/>
@@ -20,7 +20,7 @@
         </div>
         <div class="row">
             <div class="col-6 col-md-3">
-                <button type="submit" class="btn btn-primary form-control">Create</button>
+                <button type="submit" class="btn btn-primary form-control">Update</button>
             </div>
             <div class="col-6 col-md-3">
                 <a asp-controller="Category" asp-action="Index" class="btn btn-secondary-border form-control">
@@ -34,7 +34,7 @@
 </form>
 @section Scripts
 {
- @{
-     <partial name="_ValidationScriptsPartial"/>
- }   
+    @{
+        <partial name="_ValidationScriptsPartial"/>
+    }   
 }
