IRepository pattern implemented

--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
     </div>
 
     <footer class="border-top footer bg-primary text-muted">
-        <div class="text-center">
+        <div class="text-center text-white">
               Made with <i class="bi bi-heart-fill"></i> BulkyWeb 
         </div>
     </footer>
