--- a/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Delete.cshtml
@@ -1,5 +1,5 @@
 @model Bulky.Models.Product
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
@@ -15,14 +15,34 @@
                            <div class="form form-floating py-2 col-12">
                                <input asp-for="Title" disabled class="form-control border-0 shadow"/>
                                <label  asp-for="Title" disabled class="ms-2" ></label>
-                               </div>
+                           </div>
+                           <div class="form form-floating py-2 col-12">
+                               <input asp-for="Description" disabled class="form-control border-0 shadow"/>
+                               <label  asp-for="Description" disabled class="ms-2" ></label>
+                           </div>
+                           <div class="form form-floating py-2 col-12">
+                               <input asp-for="ISBN" disabled class="form-control border-0 shadow"/>
+                               <label  asp-for="ISBN" disabled class="ms-2" ></label>
+                           </div>
                            <div class="form form-floating py-2 col-12">
                                <input asp-for="Author" disabled class="form-control border-0 shadow"/>
                                <label  asp-for="Author" disabled class="ms-2" ></label>
                            </div>
                            <div class="form form-floating py-2 col-12">
+                               <input asp-for="ListPrice" disabled class="form-control border-0 shadow"/>
+                               <label  asp-for="ListPrice" disabled class="ms-2" ></label>
+                           </div>
+                           <div class="form form-floating py-2 col-12">
                                <input asp-for="Price" disabled class="form-control border-0 shadow"/>
                                <label  asp-for="Price" disabled class="ms-2" ></label>
+                           </div>
+                           <div class="form form-floating py-2 col-12">
+                               <input asp-for="Price50" disabled class="form-control border-0 shadow"/>
+                               <label  asp-for="Price50" disabled class="ms-2" ></label>
+                           </div>
+                           <div class="form form-floating py-2 col-12">
+                               <input asp-for="Price100" disabled class="form-control border-0 shadow"/>
+                               <label  asp-for="Price100" disabled class="ms-2" ></label>
                            </div>
                            <div class="row mt-3">
                                <div class="col-6 col-md-3">
