--- a/BulkyWeb/Areas/Admin/Views/Product/Edit.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Edit.cshtml
@@ -1,6 +1,6 @@
 @model Bulky.Models.Product
 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
@@ -18,14 +18,39 @@
                     <span asp-validation-for="Title" class="text-danger"></span>
                 </div>
                 <div class="form form-floating py-2 col-12">
+                    <textarea input asp-for="Description" class="form-control border-0 shadow"></textarea>
+                    <label  asp-for="Description"  class="ms-2" ></label>
+                    <span asp-validation-for="Description" class="text-danger"></span>
+                </div>
+                <div class="form form-floating py-2 col-12">
+                    <input asp-for="ISBN" class="form-control border-0 shadow"/>
+                    <label  asp-for="ISBN"  class="ms-2" ></label>
+                    <span asp-validation-for="ISBN" class="text-danger"></span>
+                </div>
+                <div class="form form-floating py-2 col-12">
                     <input asp-for="Author" class="form-control border-0 shadow"/>
                     <label  asp-for="Author"  class="ms-2" ></label>
                     <span asp-validation-for="Author" class="text-danger"></span>
                 </div>
                 <div class="form form-floating py-2 col-12">
+                    <input asp-for="ListPrice" class="form-control border-0 shadow"/>
+                    <label  asp-for="ListPrice"  class="ms-2" ></label>
+                    <span asp-validation-for="ListPrice" class="text-danger"></span>
+                </div>
+                <div class="form form-floating py-2 col-12">
                     <input asp-for="Price" class="form-control border-0 shadow"/>
                     <label  asp-for="Price"  class="ms-2" ></label>
                     <span asp-validation-for="Price" class="text-danger"></span>
+                </div>
+                <div class="form form-floating py-2 col-12">
+                    <input asp-for="Price50" class="form-control border-0 shadow"/>
+                    <label  asp-for="Price50"  class="ms-2" ></label>
+                    <span asp-validation-for="Price50" class="text-danger"></span>
+                </div>
+                <div class="form form-floating py-2 col-12">
+                    <input asp-for="Price100" class="form-control border-0 shadow"/>
+                    <label  asp-for="Price100"  class="ms-2" ></label>
+                    <span asp-validation-for="Price100" class="text-danger"></span>
                 </div>
                 <div class="row mt-3">
                     <div class="col-6 col-md-3">
