--- a/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -1,6 +1,6 @@
 @model List<Bulky.Models.Product>
 
-<div class="card shadow border-0 mt-4">
+<div class="card shadow border-0 my-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
@@ -26,9 +26,11 @@
                       Title
                    </th>
                    <th>
-                     Author
+                       Author
                    </th>
-                  <th>Price</th>
+                   <th>ISBN</th>
+                   <th>Price</th>
+                   <th>Category</th>
                </tr>
                </thead>
                <tbody>
@@ -37,7 +39,11 @@
                     <tr>
                         <td>@obj.Title</td>
                         <td>@obj.Author</td>
+                        <td>@obj.ISBN</td>
                         <td>@obj.Price</td>
+                        <td></td>
+                       
+                       
                         <td>
                             <div class="w-75 btn-group" role="group">
                                 <a asp-controller="Product" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
