--- a/BulkyWeb/Areas/Customer/Views/Home/Detail.cshtml
+++ b/BulkyWeb/Areas/Customer/Views/Home/Detail.cshtml
@@ -1,6 +1,6 @@
 @model Product
 <form method="post">
-    <div class="card shadow border-0 mt-4">
+    <div class="card shadow border-0 mt-4 mb-4">
         <div class="card-header bg-secondary bg-gradient text-light py-4">
             <div class="row">
                 <div class="col-12 text-center">
@@ -25,7 +25,7 @@
                     <div class="col-12 col-lg-6 offset-lg-1">
 
                         <div class="col-12 col-md-6 pb-4">
-                            <span class="badge">@Model.Category</span>
+                            <span class="badge">@Model.Category.Name</span>
                         </div>
                         <div class="row ps-2">
                             <h6 class="text-dark text-opacity-50 ">ISBN : @Model.ISBN</h6>
@@ -33,7 +33,7 @@
                         <div class="row ps-2">
                             <h6 class="text-dark text-opacity-50  pb-2">List Price: 
                                 <span class="text-decoration-line-through">
-                                    @Model.ListPrice
+                                    @Model.ListPrice.ToString("C0")
                                 </span>
                             </h6>
                         </div>
@@ -56,17 +56,17 @@
                                 <div>Price</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>Price</div>
+                                <div>@Model.Price.ToString("c")</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>Price50</div>
+                                <div>@Model.Price50.ToString("c")</div>
                             </div>
                             <div class="p-1 col-3 col-lg-2 bg-white text-warning fw-bold">
-                                <div>Price100</div>
+                                <div>@Model.Price100.ToString("c")</div>
                             </div>
                         </div>
                         <div class="row pl-2 my-3">
-                            <p class="text-secondary lh-sm">Description</p>
+                            <p class="text-secondary lh-sm">@Html.Raw(Model.Description)</p>
                         </div>
                         <div class="row pl-2 mb-3">
                             <div class="col-md-4">
@@ -86,7 +86,7 @@
                                 <button type="submit" disabled 
                                     class="btn btn-primary bg-gradient  w-100 py-2 text-uppercase fw-semibold"
                                 >
-                                Add to Cart (Comming Soon...)
+                                Add to Cart (Coming Soon...)
                             </button>
                             </div>
                         </div>
